# glfw_practice

./: CMakeLists.txt
src/: main.cpp
